
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int decrypt_usr_pass (char*,char*) ;
 int dump_registry_pwds () ;
 int greetz () ;
 scalar_t__ strncmp (char*,char*,int) ;
 int usage () ;

void main(int argc, char *argv[])
{
 greetz();

 if(argc ==2 && strncmp(argv[1],"-d",2)==0 )
 {

  dump_registry_pwds();
 }
 else if(argc == 3 && strncmp(argv[1],"-d",2)!=0)
 {

  decrypt_usr_pass(argv[1],argv[2]);
 }
 else
 {
  usage();
  return;
 }



}
